bug: too large for mobile, changed col-md-6 to col-lg-6. video still not showing on mobile, added display block to the video css

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ label {
     top: 0;
     width: 100%;
     object-fit: fill;
+    display: block;
 }
 
 form {
